--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         function getRandom() {
             const Keyss = Object.keys(listQuotes);
-            console.log(Keyss);
+            // console.log(Keyss);
             const randomNumber = Math.floor(Math.random() * Keyss.length);
             const randomKey = Keyss[randomNumber];
             const keyValue = listQuotes[randomKey];
